--- a/package.json
+++ b/package.json
@@ -9,21 +9,27 @@
     "seed:admin": "node scripts/create-admin.js"
   },
   "dependencies": {
+    "@geoman-io/leaflet-geoman-free": "^2.19.2",
     "@google/generative-ai": "^0.24.1",
     "@prisma/client": "^6.19.2",
-    "@types/leaflet-draw": "^1.0.13",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-slot": "^1.2.4",
     "bcryptjs": "^3.0.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "leaflet": "^1.9.4",
-    "leaflet-draw": "^1.0.4",
     "leaflet.markercluster": "^1.5.3",
+    "lucide-react": "^0.575.0",
     "next": "16.1.6",
     "next-auth": "^4.24.13",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-leaflet": "^5.0.0",
-    "react-leaflet-draw": "^0.21.0"
+    "tailwind-merge": "^3.5.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.2.0",
     "@types/leaflet": "^1.9.21",
     "@types/leaflet.markercluster": "^1.5.6",
     "@types/node": "^20",
