docs: Update deployment config, bundle postgres in compose, and update env example

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,16 @@
 SMARTOLT_BASE_URL=https://your-instance.smartolt.com
 SMARTOLT_API_TOKEN=your-api-token-here
-NEXT_PUBLIC_MAP_CENTER_LAT=-6.2088
-NEXT_PUBLIC_MAP_CENTER_LNG=106.8456
+
+NEXT_PUBLIC_MAP_CENTER_LAT=-7.5
+NEXT_PUBLIC_MAP_CENTER_LNG=112.75
 NEXT_PUBLIC_MAP_ZOOM=12
 NEXT_PUBLIC_REFRESH_INTERVAL=30000
+
+# Security Configuration
+# (Generate a random string: openssl rand -base64 32)
+NEXTAUTH_SECRET=your-super-secret-production-key
+NEXTAUTH_URL=http://localhost:3000
+
+# Database Configuration 
+# (By default pairs with docker-compose.yml Postgres DB)
+DATABASE_URL="postgresql://nocadmin:nocpassword@localhost:5432/noc_db?schema=public"
